crates/ditto-checker/tests/golden/type-errors/duplicate_import_line.ditto
module Test exports (..);

import Data.Stuff (id);
import Data.Stuff;
